Resolved editor and build warnings